[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]

[dependencies]
anyhow = "1.0"
fast_paths = "1.0.0"
geo = "0.30.0"
geo-types = "0.7.16"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
log = "0.4"
osm-reader = { git = "https://github.com/a-b-street/osm-reader" }
serde = { version = "1.0", features = ["derive"], optional = true }

[patch.crates-io]
geo = { git = "https://github.com/georust/geo" } 
