[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
anyhow = "1.0"
fast_paths = "1.0.0"
geo = "0.32.0"
geo-types = "0.7.16"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
i_overlay = { version = "4.0.0, < 4.1.0", default-features = false }
log = "0.4"
osm-reader = { git = "https://github.com/a-b-street/osm-reader" }
rstar = "0.12.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
urlencoding = "2.1.3"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.81", features = ["Document", "Element", "HtmlAnchorElement", "Window"] }
